objects/C2__c.object
<CustomObject>
    <fields>
        <fullName>CF1__c</fullName>
        <description>testing</description>
        <label>CF1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF2__c</fullName>
        <label>CF2</label>
        <length>12</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF3__c</fullName>
        <label>CF2</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>C2</label>
    <nameField>
        <label>C2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>